--- a/config.json
+++ b/config.json
@@ -51,6 +51,21 @@
                 "categories": {}
             },
             "logs": {}
+        },
+        "1271419577594679318": {
+            "owner_id": 481147774004625418,
+            "admin_list": [
+                481147774004625418
+            ],
+            "autorole": null,
+            "welcome_channel": null,
+            "antilink": false,
+            "autoreact": {},
+            "ticket": {
+                "channel": null,
+                "categories": {}
+            },
+            "logs": {}
         }
     }
 }
