--- a/config.json
+++ b/config.json
@@ -21,10 +21,6 @@
             "form": {
               "test": "test"
             }
-          },
-          "Test": {
-            "description": "Cliquez ici pour ouvrir un ticket",
-            "emoji": ""
           }
         },
         "role": 1271403857947398237
@@ -34,9 +30,8 @@
         "boostlog": 1271421365051850784
       },
       "botname": "BOT",
-      "theme": "fffff",
-      "antiraid": true,
-      "status": "tets"
+      "theme": "39372",
+      "antiraid": true
     },
     "947901267219472426": {
       "owner_id": 481147774004625418,
@@ -50,6 +45,37 @@
         "categories": {}
       },
       "logs": {}
+    },
+    "1271419577594679318": {
+      "owner_id": 481147774004625418,
+      "admin_list": [
+        481147774004625418, 1271132555957239913, 852699091040337991
+      ],
+      "autorole": 1271419577624166496,
+      "welcome_channel": 1271419578806964336,
+      "antilink": false,
+      "autoreact": {},
+      "ticket": {
+        "channel": 1271419578609696799,
+        "categories": {
+          "Renseignement": {
+            "description": "Cliquez ici pour ouvrir un ticket de renseignement",
+            "emoji": "\ud83d\udd0e",
+            "form": {
+              "\ud83d\udd0ePosez votre question ici !": "Posez votre question ici..."
+            }
+          },
+          "Achat": {
+            "description": "Cliquez ici pour ouvrir une demande d'achat",
+            "emoji": "\ud83d\udcb8"
+          }
+        }
+      },
+      "logs": {
+        "raidlog": 1271419578290798634,
+        "boostlog": 1271419578290798634
+      },
+      "theme": "0071ff"
     }
   },
   "dropbox_token": "sl.B6xrX43WwdMfkyoloFqVZVN4U_TmktRfyCnuxsh6I9wGD_IubyZR5MdrLjbPNCqkWWHMdze3YJ3ZNd2KN3CPqZbeRsUeLN6JUQ812pshe-sxyR_IM8aXCfrk1_PmF0RLnnXPjPspvwZ_"
